refactor : fileStorage에서 Voucher와 dto로 반환하는 부분을 Converter에 위임하였습니다